feat: more bibles
